# BLE-Indoor-Positioning-0.4.0

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: beacons.json  cubicles.json  cubicles_New.json
app/src/main/cpp/: beacon.cpp  beacon.h  localise.cpp  pathPlanning.cpp  test_trilateration.cpp  test_trilateration.h  trilateration.cpp  trilateration.h
app/src/main/java/com/nexenio/bleindoorpositioningdemo/: DeviceSensorLooper.java  HomeActivity.java  SensorDataListener.java  SplashActivity.java
app/src/main/java/com/nexenio/bleindoorpositioningdemo/bluetooth/: BeaconLoc.java  BeaconStore.java  BluetoothClient.java
app/src/main/java/com/nexenio/bleindoorpositioningdemo/location/: AndroidLocationProvider.java
app/src/main/java/com/nexenio/bleindoorpositioningdemo/ui/beaconview/: BeaconViewFragment.java  CvUtil.java
app/src/main/java/com/nexenio/bleindoorpositioningdemo/ui/beaconview/chart/: BeaconChartFragment.java  BeaconLineChart.java
app/src/main/java/com/nexenio/bleindoorpositioningdemo/ui/beaconview/map/: BeaconMap.java  BeaconMapBackground.java  BeaconMapFragment.java
app/src/main/java/com/nexenio/bleindoorpositioningdemo/ui/beaconview/pathplanning/: BeaconNavigateFragment.java  DynamicStepCounter.java  SensorEventFragment.java
app/src/main/java/com/nexenio/bleindoorpositioningdemo/ui/beaconview/radar/: BeaconRadarFragment.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/res/drawable/: button_bg.xml  chevron_right.xml  circle_bg.xml  crosshairs.xml  google_nearby.xml  near_me.xml  note_text.xml  pin_drop.xml  tilde.xml  timer_off.xml
app/src/main/res/layout/: activity_home.xml  activity_splash.xml  custom_spinner.xml  custom_spinner_dropdown.xml  fragment_beacon_navigate.xml  fragment_sensor_event.xml
app/src/main/res/menu/: navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+8 files in other folders)
